--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
 
 body {
   background-color: black;
+  font-family: "Roboto", sans-serif;
 }
 .main-header {
   height: 50px;
@@ -18,31 +19,73 @@ body {
   background-color: black;
 }
 .main-contents {
-  border: 1px solid white;
   color: white;
   padding-top: 52px;
 }
 
 .image-container {
-  width: 100vw;
+  width: 100%;
   height: 80vh;
-  background-image: url("/image/phone.jpg");
+  background-image: url("/asset/phone-background.png");
   background-repeat: none;
   background-size: cover;
   background-position: center;
   display: flex;
+  line-height: 2;
 }
 
 .division-60 {
-  width: 50%;
+  width: 60%;
   position: relative;
-  color: #eabfb9;
+  color: #e8c9b4;
 }
 
-.division-60 div {
+.division-60-contents {
   position: absolute;
-  top: 15%;
+  top: 5%;
   left: 10%;
+}
+
+.division-60-contents h1 {
+  font-family: "Andika New Basic", sans-serif;
+  font-size: 3rem;
+}
+
+.division-60 .circle-button-list {
+  position: absolute;
+  bottom: 5%;
+  right: 0;
+
+  width: 250px;
+  height: 50px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.division-60 .circle-button__item {
+  border: 1px solid white;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  cursor: pointer;
+  border: none;
+}
+
+.gray-button {
+  background: rgb(77, 76, 76);
+}
+
+.white-button {
+  background: white;
+}
+
+.gold-button {
+  background: #e8c9b4;
+}
+
+.division-40 {
+  width: 40%;
 }
 
 .division-60 div p {
@@ -55,17 +98,25 @@ body {
   padding: 10px;
   border-radius: 20px;
   background: none;
-  color: #eabfb9;
-  border: 2px solid #eabfb9;
+  color: #e8c9b4;
+  border: 2px solid #e8c9b4;
   cursor: pointer;
 }
 
-.learn-button:focus {
+.learn-button-reverse {
+  padding: 10px;
+  border-radius: 20px;
+  background: #e8c9b4;
+  color: black;
+  border: 2px solid #e8c9b4;
+  cursor: pointer;
+}
+
+.specific-button:focus {
   outline: none;
 }
 
 .main-footer {
-  border: 1px solid white;
   color: white;
 }
 
@@ -80,10 +131,9 @@ body {
 }
 
 .hamberger-item {
-  border: 1px solid white;
+  border: 1px solid #e8c9b4;
   margin: 5px 0px;
   width: 20px;
-  border-color: #eabfb9;
 }
 
 .part-container {
@@ -94,13 +144,13 @@ body {
 }
 
 .for-line {
-  border-top: 1px solid #eabfb9;
+  border-top: 1px solid #e8c9b4;
   height: 0px;
   width: 45%;
 }
 
 .part {
-  color: #eabfb9;
+  color: #e8c9b4;
 }
 
 .part-one-container {
@@ -230,6 +280,6 @@ body {
 }
 
 .part-four-contents p {
-  color: #eabfb9;
+  color: #e8c9b4;
   margin: 1rem 0;
 }
