--- a/main.css
+++ b/main.css
@@ -7,8 +7,48 @@ body {
   background-color: black;
   font-family: "Roboto", sans-serif;
 }
+
+.backdrop {
+  display: none;
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+.side-menu {
+  display: none;
+  position: fixed;
+  z-index: 100;
+  width: 20vw;
+  height: calc(100vh - 80px);
+  right: 0;
+  bottom: 0;
+  background-color: rgb(37, 37, 37);
+}
+
+.side-menu__list {
+  margin-top: 3rem;
+  list-style: none;
+  padding-left: 3rem;
+}
+
+.side-menu__item {
+  border-top: 1px solid #e8c9b4;
+  padding-bottom: 3rem;
+  padding-top: 0.5rem;
+}
+
+.side-menu__item a {
+  text-decoration: none;
+  color: #e8c9b4;
+  font-size: 1rem;
+}
+
 .main-header {
-  height: 50px;
+  height: 80px;
   color: white;
   display: flex;
   justify-content: space-between;
@@ -64,7 +104,6 @@ body {
 }
 
 .division-60 .circle-button__item {
-  border: 1px solid white;
   height: 30px;
   width: 30px;
   border-radius: 50%;
