--- a/main.css
+++ b/main.css
@@ -380,3 +380,47 @@ body {
   color: #e8c9b4;
   margin: 1rem 0;
 }
+
+.main-footer {
+  position: relative;
+}
+
+.change-button-list {
+  width: 300px;
+  height: 50px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.change-button-list__direction {
+  font-size: 30px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  border-radius: 50%;
+  cursor: pointer;
+  color: #e8c9b4;
+}
+
+.change-button-list__item {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  border-radius: 50%;
+  cursor: pointer;
+  color: #ccc;
+}
+
+.change-button-list__item:hover {
+  background-color: #e8c9b4;
+  color: black;
+}
+
+.to-top {
+  position: absolute;
+  right: 0;
+}
