--- a/main.css
+++ b/main.css
@@ -414,7 +414,7 @@ body {
 
 .main-footer {
   position: relative;
-  margin-top: 5rem;
+  margin: 5rem 0;
 }
 
 .change-button-list {
@@ -455,7 +455,7 @@ body {
 
 .to-top {
   position: absolute;
-  right: 10rem;
+  right: 8%;
   top: 10px;
   width: 50px;
   height: 30px;
