--- a/main.css
+++ b/main.css
@@ -187,6 +187,7 @@ body {
 
 .part {
   color: #e8c9b4;
+  font-size: 2rem;
 }
 
 .part-one-container {
@@ -253,7 +254,7 @@ body {
 }
 
 .part-two {
-  width: 30%;
+  width: 20%;
   height: 100%;
   background-repeat: no-repeat;
   background-position: center;
